[package]
name = "rusty-source-map"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
source-map-mappings = "0.5.0"
url = "2.2.2"
regex = "1.5.4"
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
